upgrade fire.ioc by sunhz as datasheet

--- a/Fire.ioc
+++ b/Fire.ioc
@@ -1,6 +1,21 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 KeepUserPlacement=false
+LTDC.ActiveW=720
+LTDC.Alpha0_L0=0xaa
+LTDC.Alpha_L0=0xaa
+LTDC.Blue_L0=0xaa
+LTDC.Green_L0=0xaa
+LTDC.HBP=367
+LTDC.HFP=627
+LTDC.HSync=3
+LTDC.IPParameters=ActiveW,HSync,VSync,HBP,Layers,PixelFormat_L0,Alpha_L0,Alpha0_L0,Blue_L0,Green_L0,Red_L0,HFP,VBP,VFP
+LTDC.Layers=0
+LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB888
+LTDC.Red_L0=0xaa
+LTDC.VBP=38
+LTDC.VFP=5
+LTDC.VSync=3
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=FMC
@@ -130,6 +145,8 @@ PB14.Signal=SPI2_MISO
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
+PB8.GPIOParameters=GPIO_FM8
+PB8.GPIO_FM8=__NULL
 PB8.Locked=true
 PB8.Mode=RGB888
 PB8.Signal=LTDC_B6
@@ -264,14 +281,14 @@ ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
-ProjectManager.MainLocation=Src
+ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=Fire.ioc
 ProjectManager.ProjectName=Fire
-ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=EWARM V8
+ProjectManager.StackSize=0x800
+ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true
